# aspect-cli-repro

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  eslint.config.mjs  linters.bzl  package.json  pnpm-lock.yaml  tsconfig.json
.aspect/cli/: config.yaml
src/: file1.ts
